some more work on stuff, just messing around

--- a/src/main/resources/data/labyrinth/lang/en_us.json
+++ b/src/main/resources/data/labyrinth/lang/en_us.json
@@ -1,4 +1,10 @@
 {
   "creative.labyrinth.group": "Labyrinth",
-  "item.labyrinth.test_sword": "Test Sword"
+  "item.labyrinth.test_sword": "Test Sword",
+
+  "gui.labyrinth.forge.title": "Forge",
+  "gui.labyrinth.forge.message.negative.ingredient": "§cYou don't have all the required ingredients!",
+  "gui.labyrinth.forge.message.negative.forge": "§cYour forge structure is not complete!",
+
+  "item.labyrinth.blazebow.tooltip": "Comes pre-enchanted with Flame I"
 }
