Started work on new Items, added translations, made recipes work with the count property on ingredients (wooo it works!), also fixed server translation api being broken (updated its version)

--- a/src/main/resources/data/labyrinth/lang/en_us.json
+++ b/src/main/resources/data/labyrinth/lang/en_us.json
@@ -1,10 +1,12 @@
 {
   "creative.labyrinth.group": "Labyrinth",
+
   "item.labyrinth.test_sword": "Test Sword",
+  "item.labyrinth.blaze_bow": "Blaze Bow",
+    "item.labyrinth.blazebow.tooltip": "Comes pre-enchanted with Flame I",
+  "item.labyrinth.hammer.tooltip": "Comes pre-enchanted with Knockback II",
 
   "gui.labyrinth.forge.title": "Forge",
   "gui.labyrinth.forge.message.negative.ingredient": "§cYou don't have all the required ingredients!",
-  "gui.labyrinth.forge.message.negative.forge": "§cYour forge structure is not complete!",
-
-  "item.labyrinth.blazebow.tooltip": "Comes pre-enchanted with Flame I"
+  "gui.labyrinth.forge.message.negative.forge": "§cYour forge structure is not complete!"
 }
