--- a/src/main/resources/data/labyrinth/lang/en_us.json
+++ b/src/main/resources/data/labyrinth/lang/en_us.json
@@ -8,7 +8,42 @@
   "item.labyrinth.golden_warhammer": "Golden Warhammer",
   "item.labyrinth.diamond_warhammer": "Diamond Warhammer",
   "item.labyrinth.netherite_warhammer": "Netherite Warhammer",
-    "item.labyrinth.hammer.tooltip": "Heavy, but powerful",
+    "item.labyrinth.warhammer.tooltip": "Heavy, but powerful",
+
+  "item.labyrinth.iron_hammer": "Iron Hammer",
+  "item.labyrinth.golden_hammer": "Golden Hammer",
+  "item.labyrinth.diamond_hammer": "Diamond Hammer",
+  "item.labyrinth.netherite_hammer": "Netherite Hammer",
+
+  "item.labyrinth.iron_waraxe": "Iron Waraxe",
+  "item.labyrinth.golden_waraxe": "Golden Waraxe",
+  "item.labyrinth.diamond_waraxe": "Diamond Waraxe",
+  "item.labyrinth.netherite_waraxe": "Netherite Waraxe",
+
+  "item.labyrinth.iron_knife": "Iron Knife",
+  "item.labyrinth.golden_knife": "Golden Knife",
+  "item.labyrinth.diamond_knife": "Diamond Knife",
+  "item.labyrinth.netherite_knife": "Netherite Knife",
+
+  "item.labyrinth.iron_spear": "Iron Spear",
+  "item.labyrinth.golden_spear": "Golden Spear",
+  "item.labyrinth.diamond_spear": "Diamond Spear",
+  "item.labyrinth.netherite_spear": "Netherite Spear",
+
+  "item.labyrinth.iron_cleaver": "Iron Cleaver",
+  "item.labyrinth.golden_cleaver": "Golden Cleaver",
+  "item.labyrinth.diamond_cleaver": "Diamond Cleaver",
+  "item.labyrinth.netherite_cleaver": "Netherite Cleaver",
+
+  "item.labyrinth.iron_tomahawk": "Iron Tomahawk",
+  "item.labyrinth.golden_tomahawk": "Golden Tomahawk",
+  "item.labyrinth.diamond_tomahawk": "Diamond Tomahawk",
+  "item.labyrinth.netherite_tomahawk": "Netherite Tomahawk",
+
+  "item.labyrinth.iron_katana": "Iron Katana",
+  "item.labyrinth.golden_katana": "Golden Katana",
+  "item.labyrinth.diamond_katana": "Diamond Katana",
+  "item.labyrinth.netherite_katana": "Netherite Katana",
 
   "gui.labyrinth.forge.title": "Forge",
   "gui.labyrinth.forge.message.negative.ingredient": "§cYou don't have all the required ingredients!",
