Made spear return to the same slot you threw it from, added a cool description for spears!

--- a/src/main/resources/data/labyrinth/lang/en_us.json
+++ b/src/main/resources/data/labyrinth/lang/en_us.json
@@ -29,6 +29,7 @@
   "item.labyrinth.golden_spear": "Golden Spear",
   "item.labyrinth.diamond_spear": "Diamond Spear",
   "item.labyrinth.netherite_spear": "Netherite Spear",
+    "item.labyrinth.spear.tooltip": "Like trident, but less magical",
 
   "item.labyrinth.iron_cleaver": "Iron Cleaver",
   "item.labyrinth.golden_cleaver": "Golden Cleaver",
